# scholarship-application-site

./: README  package-lock.json  package.json
client/: .eslintrc.json  README.md  package-lock.json  package.json
client/cypress/integration/: SystemTests.spec.js  signup.spec.js
client/src/: ProfilePage.jsx  index.js  routes.js  setupProxy.js  util.js
client/src/components/: AllScholarshipsPage.jsx  App.css  App.js  App.jsx  ApplyPage.jsx  ChangePassword.jsx  ChangeProfile.js  ChangeProfile.jsx  JudgeApplicationsPage.jsx  JudgePage.jsx  Login.js  NavBar.js  NavBar.jsx  NotificationsPage.jsx  Organization.js  Organization.jsx  OrganizationPage.jsx  ProfilePage.jsx  Register.js  ScholarshipForm.jsx  ScholarshipList.js  ScholarshipList.jsx  ScholarshipPage.jsx  Settings.js  Settings.jsx  SettingsPage.jsx  SettingsPage2.jsx  SettingsPageDEPRACATED.jsx  SignIn.js  SignIn.jsx  SignUp.js  SignUp.jsx  Student.js  UserInfo.jsx
client/src/components/Button/: Button.jsx
client/src/components/ForgotPassword/: ForgotPassword.css  ForgotPassword.jsx
client/src/components/LandingPage/: Card.jsx  LandingPage.jsx  websites.json
client/src/components/ResetPassword/: ResetPassword.css  (+1 more)
client/testSuite/: Test Suite.docx
server/: .gitignore  README.md  app.py  pyproject.toml
server/api/: API_doc.md  api.py  database.py
server/api/blueprints/: applications.py  mcdm.py  mcdm_algorithm.py  notifications.py  scholarships.py  scorecards.py  users.py
server/models/: users.py
server/server/: app.py
server/tests/: test_server.py
src/: index.js
src/components/: Login.js
(+5 files in other folders)
